@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-10T08:23:48Z",
-  "count_outdated" : 1819,
-  "uniques_outdated" : 359,
-  "count" : 2088,
-  "uniques" : 391,
+  "timestamp" : "2022-05-10T16:30:17Z",
+  "count_outdated" : 1825,
+  "uniques_outdated" : 363,
+  "count" : 2093,
+  "uniques" : 393,
   "clones" : [
-    {
-      "timestamp": "2022-04-26T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 0, 6 ],
-      "uniques": 4,
-      "uniques_minmax": [ 0, 4 ]
-    },
     {
       "timestamp": "2022-04-27T00:00:00Z",
       "count": 1,
@@ -84,10 +77,10 @@
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "count": 6,
+      "count_minmax": [ 0, 6 ],
+      "uniques": 3,
+      "uniques_minmax": [ 0, 3 ]
     }
   ]
 }
