@@ -1,12 +1,7 @@
 {
-  "count": 269,
-  "uniques": 16,
+  "count": 268,
+  "uniques": 17,
   "clones": [
-    {
-      "timestamp": "2022-04-26T00:00:00Z",
-      "count": 6,
-      "uniques": 4
-    },
     {
       "timestamp": "2022-04-27T00:00:00Z",
       "count": 1,
@@ -59,8 +54,8 @@
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 6,
+      "uniques": 3
     }
   ]
 }
